--- a/game.html
+++ b/game.html
@@ -27,8 +27,8 @@
     var o = {
       image: image,
       x: 100,
-      y: 200,
-      speed: 5
+      y: 250,
+      speed: 15
     };
 
     o.moveLeft = function () {
@@ -38,17 +38,95 @@
     o.moveRight = function () {
       o.x += o.speed;
     };
+
+    o.collide = function (ball) {
+      if (ball.y + ball.image.height > o.y) {
+        if (ball.x > o.x && ball.x < o.x + o.image.width) {
+          return true;
+        }
+      }
+
+      return false;
+    };
+
+    return o;
+  };
+
+  var Ball = function () {
+    var image = imageFromPath('ball.png');
+    var o = {
+      image: image,
+      x: 100,
+      y: 200,
+      speedX: 10,
+      speedY: 10,
+      fired: false
+    };
+
+
+    o.fire = function () {
+      o.fired = true;
+    };
+    o.move = function () {
+      if (o.fired) {
+        log("move");
+        if (o.x < 0 || o.x > 400) {
+          o.speedX *= -1;
+        }
+        if (o.y < 0 || o.y > 300) {
+          o.speedY *= -1;
+        }
+        //move
+        o.x += o.speedX;
+        o.y += o.speedY;
+      }
+    };
+
+
     return o;
   };
 
   var GuaGame = function () {
-    var g = {};
+    var g = {
+      actions: {},
+      keydowns: {}
+    };
     var canvas = document.querySelector('#id-canvas');
     var context = canvas.getContext('2d');
 
     g.canvas = canvas;
     g.context = context;
+
+    g.drawImage = function (guaImage) {
+      g.context.drawImage(guaImage.image, guaImage.x, guaImage.y);
+    };
+    //events
+    window.addEventListener("keydown", function (event) {
+      g.keydowns[event.key] = true;
+    });
+    window.addEventListener("keyup", function (event) {
+      g.keydowns[event.key] = false;
+    });
+
+    //
+    g.registerAction = function (key, callback) {
+      g.actions[key] = callback;
+    };
+
+    //timer
     setInterval(function () {
+      //events
+
+      var actions = Object.keys(g.actions);
+      for (var i = 0; i < actions.length; i++) {
+        var key = actions[i];
+        if (g.keydowns[key]) {
+          //如果按键被按下，调用
+          g.actions[key]();
+
+        }
+      }
+
       //update
       g.update();
       //clear
@@ -69,42 +147,29 @@
 
     var game = GuaGame();
 
+    var ball = Ball();
 
-    var leftDown = false;
-    var rightDown = false;
-    //events
-    window.addEventListener('keydown', function () {
-      var k = event.key;
-      if (k === 'a') {
-        leftDown = true;
-      } else if (k === 'd') {
-        rightDown = true;
-      }
+    game.registerAction('a', function () {
+      paddle.moveLeft();
     });
-
-    window.addEventListener('keyup', function () {
-      var k = event.key;
-      if (k === 'a') {
-        leftDown = false;
-      } else if (k === 'd') {
-        rightDown = false;
-      }
+    game.registerAction('d', function () {
+      paddle.moveRight();
     });
-
-
+    game.registerAction('f', function () {
+      ball.fire();
+    });
     game.update = function () {
-      //update x and y
-      if (leftDown) {
-        paddle.moveLeft();
-      } else if (rightDown) {
-        paddle.moveRight();
+      ball.move();
+      //判断相撞
+      if (paddle.collide(ball)) {
+        ball.speedY *= -1;
       }
-
     };
 
     game.draw = function () {
-      game.context.drawImage(paddle.image, paddle.x, paddle.y);
 
+      game.drawImage(paddle);
+      game.drawImage(ball);
     };
 
   };
