--- a/game.html
+++ b/game.html
@@ -19,85 +19,8 @@
 <body>
 
 <canvas id="id-canvas" width="400" height="300"></canvas>
-<script type="text/javascript">
-
-
-  var loadLevel = function (n) {
-    n = n - 1;
-    var level = levels[n];
-    var blocks = [];
-    for (var i = 0; i < level.length; i++) {
-      var p = level[i];
-      var b = Block(p);
-      blocks.push(b);
-    }
-    return blocks;
-  };
-
-  var __main = function () {
-    var paddle = Paddle();
-
-    var game = GuaGame(60);
-
-    var ball = Ball();
-
-
-    var blocks = loadLevel(1);
-
-    var paused = false;
-    game.registerAction('a', function () {
-      paddle.moveLeft();
-    });
-    game.registerAction('d', function () {
-      paddle.moveRight();
-    });
-    game.registerAction('f', function () {
-      ball.fire();
-    });
-
-    window.addEventListener('keydown', function (event) {
-      var k = event.key;
-      if (event.key === 'p') {
-        paused = !paused;
-      } else if ('1234567'.includes(event.key)) {//stringObj.includes() 返回一个布尔值，该值指示传入字符串是否包含在字符串对象中。
-        blocks = loadLevel(Number(k));
-      }
-    });
-    game.update = function () {
-      if (paused) {
-        return;
-      }
-      ball.move();
-      //判断相撞
-      if (paddle.collide(ball)) {
-        ball.bounce();
-      }
-
-      //判断ball 和blocks相撞
-      for (var i = 0; i < blocks.length; i++) {
-        var block = blocks[i];
-        if (block.collide(ball)) {
-          log("block相撞");
-          block.kill();
-          ball.bounce();
-        }
-      }
-    };
-
-    game.draw = function () {
-      game.drawImage(paddle);
-      game.drawImage(ball);
-      //draw block
-      for (var i = 0; i < blocks.length; i++) {
-        var block = blocks[i];
-        if (block.alive) {
-          game.drawImage(block);
-        }
-      }
-    };
-  };
-
-  __main();
-</script>
+<hr>
+<input id="id-input-speed" type="range" value="1"/>
+<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
