--- a/game.html
+++ b/game.html
@@ -15,6 +15,8 @@
   <script type="text/javascript" src="utils.js"></script>
   <script type="text/javascript" src="ball.js"></script>
   <script type="text/javascript" src="level.js"></script>
+  <script type="text/javascript" src="scene.js"></script>
+  <script type="text/javascript" src="scene_end.js"></script>
 </head>
 <body>
 
