--- a/game.html
+++ b/game.html
@@ -9,14 +9,20 @@
     }
 
   </style>
-  <script type="text/javascript" src="guagame.js"></script>
-  <script type="text/javascript" src="block.js"></script>
-  <script type="text/javascript" src="paddle.js"></script>
-  <script type="text/javascript" src="utils.js"></script>
-  <script type="text/javascript" src="ball.js"></script>
+  <!-- gua game-->
+  <script type="text/javascript" src="guagame/gua_game.js"></script>
+  <script type="text/javascript" src="guagame/utils.js"></script>
+  <script type="text/javascript" src="guagame/gua_scene.js"></script>
+  <!--场景文件-->
+  <script type="text/javascript" src="scene/main/scene.js"></script>
+  <script type="text/javascript" src="scene/main/block.js"></script>
+  <script type="text/javascript" src="scene/main/paddle.js"></script>
+  <script type="text/javascript" src="scene/main/ball.js"></script>
+  <!--结束和标题场景-->
+  <script type="text/javascript" src="scene/end/scene_end.js"></script>
+  <script type="text/javascript" src="scene/title/scene_title.js"></script>
+  <!--关卡数据-->
   <script type="text/javascript" src="level.js"></script>
-  <script type="text/javascript" src="scene.js"></script>
-  <script type="text/javascript" src="scene_end.js"></script>
 </head>
 <body>
 
